{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 26,
  "lineage": "fcb7ffc4-10be-5d34-5080-460a9e1dd523",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:security-group/sg-0362ae51d595ab5c0",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-0362ae51d595ab5c0",
            "ingress": [],
            "name": "fast-food-db-access-sg",
            "name_prefix": "",
            "owner_id": "289212747056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-db-access-sg"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b59352822e8ca1eb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:security-group/sg-0b5da126186147074",
            "description": "fast-food Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5da126186147074",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0362ae51d595ab5c0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fast-food-rds-sg",
            "name_prefix": "",
            "owner_id": "289212747056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-rds-sg"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b59352822e8ca1eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    }
  ]
}